--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -135,11 +135,11 @@ blockquote {
   }
 }
 
-.center img {        
-  display:block;
-  width:90%;
-  margin-left:auto;
-  margin-right:auto;
+article img {
+    display: block;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .big-ornament {
