--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -87,6 +87,14 @@ article {
   code {
     font-family: $mono-font-family;
   }
+
+  img {
+    display: block;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 }
 
 blockquote {
@@ -133,13 +141,6 @@ blockquote {
         shape-rendering: geometricPrecision;
     }
   }
-}
-
-article img {
-    display: block;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .big-ornament {
