--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,24 +16,23 @@ layout: default
       <div class="col-md-1"></div>
       <div class="col-md-8 offset-md-1">
         <article lang="en">
-          {% if page.abstract %} <b>Abstract.</b> {{ page.abstract }}<br>
-          <div id="disqus_thread"></div>
-          <script type="text/javascript">
-            /* <![CDATA[ */
-            var disqus_shortname = "{{ site.disqus_shortname }}";
-            var disqus_identifier = "{{ site.url }}_{{ page.title }}";
-            var disqus_title = "{{ page.title }}";
-            /* * * DON'T EDIT BELOW THIS LINE * * */
-            (function() {
-                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-            })();
-            /* ]]> */
-          </script>
-          <br>{% endif %}
+          {% if page.abstract %} <b>Abstract.</b> {{ page.abstract }}<br><br>{% endif %}
           {{ content }}
         </article>
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+          /* <![CDATA[ */
+          var disqus_shortname = "{{ site.disqus_shortname }}";
+          var disqus_identifier = "{{ site.url }}_{{ page.title }}";
+          var disqus_title = "{{ page.title }}";
+          /* * * DON'T EDIT BELOW THIS LINE * * */
+          (function() {
+              var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+              dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+          })();
+          /* ]]> */
+        </script>
 	     </div>
      </div>
   </div>
