--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
           {% if page.abstract %} <b>Abstract.</b> {{ page.abstract }}<br><br>{% endif %}
           {{ content }}
         </article>
-        <div id="disqus_thread"></div></div>
+        <div id="disqus_thread"></div></div></div>
         <script type="text/javascript">
           /* <![CDATA[ */
           var disqus_shortname = "{{ site.disqus_shortname }}";
@@ -34,7 +34,7 @@ layout: default
           /* ]]> */
         </script>
 	     
-     </div>
+     
   </div>
 </div>
 
