--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,8 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
   <span itemprop='author'><meta name="author" content="{{ site.author }}"><span itemprop='author'></span>
 
+  <link rel="shortcut icon" href="favicon.ico" />
+
   <link rel="icon" type="image/png" href="{{ site.url }}favicon-16x16.png" sizes="16x16">  
   <link rel="icon" type="image/png" href="{{ site.url }}favicon-32x32.png" sizes="32x32">  
   <link rel="icon" type="image/png" href="{{ site.url }}favicon-96x96.png" sizes="96x96">
