--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,16 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
   <span itemprop='author'><meta name="author" content="{{ site.author }}"><span itemprop='author'></span>
 
-  <link href="{{ site.url }}favicon.png" rel="icon">
+  <link href="{{ site.url }}favicon-32x32.png" rel="icon">
+
+  <link rel="icon" type="image/png" href="{{ site.url }}favicon-16x16.png" sizes="16x16">  
+  <link rel="icon" type="image/png" href="{{ site.url }}favicon-32x32.png" sizes="32x32">  
+  <link rel="icon" type="image/png" href="{{ site.url }}favicon-96x96.png" sizes="96x96"> 
+
+  <link rel="apple-touch-icon" href="older-iPhone.png">  
+  <link rel="apple-touch-icon" sizes="180x180" href="iPhone-6-Plus.png">  
+  <link rel="apple-touch-icon" sizes="152x152" href="iPad-Retina.png">  
+  <link rel="apple-touch-icon" sizes="167x167" href="iPad-Pro.png">  
 
   <link rel="stylesheet" href="//brick.a.ssl.fastly.net/PT+Serif:400,400i,700,700i:f/Source+Code+Pro:400,600:f">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
