--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -90,7 +90,7 @@ article {
 
   img {
     display: block;
-    width: 80%;
+    max-width: 80%;
     margin-left: auto;
     margin-right: auto;
   }
